--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -12,7 +12,7 @@ on:
 jobs:
   build:
 
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-20.04  # Ubuntuのバージョンを20.04に変更
     strategy:
       matrix:
         python-version: ['3.7']
